# quiz

./: Dockerfile  README.md  docker-compose.yml  env.example  nginx.conf  pyproject.toml  pytest.ini
app/: config.py  main.py
app/api/v1/: api.py
app/api/v1/endpoints/: answer.py
app/crud/: services.py
app/frontend/templates/: index.html
app/frontend/templates/static/css/: style.css
app/frontend/templates/static/js/: app.js  catalog.js
app/models/: database.py  models.py
app/schema/: schemas.py
app/utils/: logger.py
tests/: conftest.py  test_answer.py  test_db.py
