[tool.poetry]
name = "quiz"
version = "0.1.0"
description = ""
authors = ["ramazan_aisaev <aisaev-68@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.2"
pydantic = "^2.4.2"
uvicorn = "^0.23.2"
python-dotenv = "^1.0.0"
python-multipart = "^0.0.6"
pydantic-settings = "^2.0.3"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.21"}
aiohttp = "^3.8.6"
asyncpg = "^0.28.0"
jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
